highlight move and selfhight for pawn working

--- a/chess_game/Styles/index.css
+++ b/chess_game/Styles/index.css
@@ -41,6 +41,10 @@ body {
   cursor: pointer; /*grab?*/
 }
 
+.highlightYellow{
+  background: #f7f769;
+}
+
 .highlight{
   display: block;
   width: 30px;
