capture pawn move in progress, highliht of it not so well

--- a/chess_game/Styles/index.css
+++ b/chess_game/Styles/index.css
@@ -41,6 +41,10 @@ body {
   cursor: pointer; /*grab?*/
 }
 
+.captureColor{
+  background-color: #ee4b2b;
+}
+
 .highlightYellow{
   background: #f7f769;
 }
