--- a/chess_game/Styles/index.css
+++ b/chess_game/Styles/index.css
@@ -1,6 +1,8 @@
 /*all the visible content on the web page.*/
 body {
   background-color: #2f2e2a;
+  justify-content: center;
+  gap: 2vw;
 }
 /*
  *  Styles the root element to be a flex container with a column direccion, center it ahorizontally
@@ -12,7 +14,6 @@ body {
   display: flex; 
   flex-direction: column;
   width: fit-content;
-  margin: auto;
 }
 
 /*
@@ -26,6 +27,7 @@ body {
 .square{
   width: 80px;
   height: 80px;
+  position: relative;
 }
 
 .white{
@@ -57,4 +59,37 @@ body {
   margin-top: 26px;
   border-radius: 50%;
   background-color: rgba(0, 0, 0, 0.15);
+}
+
+.labelId{
+  position: absolute;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  left: 2px;
+  top: 0.5px;
+}
+
+.white-label-id{
+  color: #5c3973;
+}
+
+.black-label-id{
+  color: #84cca3;
+}
+
+.d-flex{
+  display: flex;
+}
+
+#move_logger{
+  width: 20vw;
+  height: 640px; /*80px (square) x 8 nº*/
+  color: white;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #262522;
+}
+
+.leftSide{
+  margin-right: 40%;
 }
