pawn promotion done 30, letters and number removed

--- a/chess_game/Styles/index.css
+++ b/chess_game/Styles/index.css
@@ -61,6 +61,41 @@ body {
   background-color: rgba(0, 0, 0, 0.15);
 }
 
+.modal{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+
+.blur{
+  filter: blur(5px);
+}
+
+.modal p{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 35px;
+  padding: 4px 8px;
+  background-color: #ee4b2b;
+  color: white;
+}
+
+.modal img{
+  box-sizing: border-box;
+  border: 5px solid transparent;
+  width: 24%;
+}
+
+.modal img:hover{
+  border: 5px solid yellow;
+  cursor: pointer;
+}
+
 .labelId{
   position: absolute;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -68,6 +103,7 @@ body {
   font-size: 14px;
   left: 2px;
   top: 0.5px;
+
 }
 
 .white-label-id{
