fixed chat style

--- a/frontend/service/chat/style.css
+++ b/frontend/service/chat/style.css
@@ -39,7 +39,7 @@
 
 #chat-window, #recent-chats, #new-chat {
 	background-color: var(--medium);
-	height: 350px;
+	height: 351px;
 	display: flex;
 	flex-direction: column;
 }
@@ -158,4 +158,8 @@
 	color: var(--dark);
 	align-self: flex-end;
 	border-bottom-right-radius: 0;
+}
+
+#chat-body {
+	height: 350px;
 }
