--- a/frontend/service/components/chat/test.html
+++ b/frontend/service/components/chat/test.html
@@ -33,11 +33,11 @@
 			<!-- recent chats tab -->
 			<!-- chat tab -->
             <div id="chat-window">
-                <div class="p-2 back-to-recents list-group-item scroll-card">
+                <div class="p-2 back-to-recents list-group-item">
                     <i class="fas fa-arrow-left p-2"></i>
                     <span id="current-chat-name"></span>
                 </div>
-                <div id="chat-messages" class="p-3 scroll-card">
+                <div id="chat-messages" class="p-3">
 					
 					<div class="game-invitation card border-0 overflow-hidden" style="max-width: 250px;">
 						<div class="progress position-absolute w-100 h-100" style="z-index: 0;">
