--- a/frontend/service/components/chat/chat.html
+++ b/frontend/service/components/chat/chat.html
@@ -10,7 +10,7 @@
 <div id="chat-body" class="card-body p-0" style="display: none;">
     <!-- recent chats tab -->
     <div id="recent-chats">
-        <div id="recent-chats-list" class="list-group list-group-flush p-2 ms-1 me-1 scroll-card">
+        <div id="recent-chats-list" class="list-group list-group-flush p-2 ms-1 me-1">
             <!-- recent chats will be rendered here -->
         </div>
         <button id="new-chat-btn" class="btn rounded-circle">
@@ -18,22 +18,22 @@
         </button>    
     </div> <!-- this closes the recent chats tab -->
     <!-- new chat tab -->
-    <div id="new-chat" class="scroll-card" style="display:none;">
+    <div id="new-chat" style="display:none;">
         <div class="list-group-item back-to-recents">
             <i class="fas fa-arrow-left me-2"></i>
             <span>back to recents</span>
         </div>
-        <div id="friends-list" class="list-group list-group-flush p-2 ms-1 me-1 scroll-card">
+        <div id="friends-list" class="list-group list-group-flush p-2 ms-1 me-1">
             <!-- friends list will be rendered here -->
         </div>
     </div> <!-- this closes the new chat tab -->
     <!-- chat tab -->
     <div id="chat-window" style="display:none;">
-        <div class="p-2 back-to-recents list-group-item scroll-card">
+        <div class="p-2 back-to-recents list-group-item">
             <i class="fas fa-arrow-left p-2"></i>
             <span id="current-chat-name"></span>
         </div>
-        <div id="chat-messages" class="p-3 scroll-card">
+        <div id="chat-messages" class="p-3">
             <div class="game-invitation"></div>
         </div>
         <form id="chat-form" class="p-2 border-top">
