implementing routing system

--- a/frontend/service/components/sidebar/styles.css
+++ b/frontend/service/components/sidebar/styles.css
@@ -30,7 +30,7 @@
     .main-content {
         margin-left: 250px;
     }
-    #sidebarToggle {
+    #sidebar-toggle {
         display: none;
     }
 }
