--- a/frontend/service/components/start-game/start-game.html
+++ b/frontend/service/components/start-game/start-game.html
@@ -45,3 +45,24 @@
 		</div>
 	</div>
 </div>
+<!-- modal -->
+<div class="modal fade" id="wait-game" tabindex="-1" aria-labelledby="waitGameLabel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title ctm-text-title" id="waitGameLabel">Waiting for Friend</h5>
+				<button type="button" class="close-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
+			</div>
+			<div class="modal-body">
+				<p id="modal-text"></p>
+				<div class="progress mt-3 position-relative" style="height: 30px;">
+					<div id="progress-bar" class="progress-bar" style="width: 100%" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+					<span id="timer" class="position-absolute top-50 start-50 translate-middle"></span>
+				</div>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn ctm-btn" data-bs-dismiss="modal">Cancel</button>
+			</div>
+		</div>
+	</div>
+</div>
