fixed some bugs on new routing system

--- a/frontend/service/components/sidebar/sidebar.html
+++ b/frontend/service/components/sidebar/sidebar.html
@@ -2,7 +2,7 @@
 	<div class="p-3">
 		<h3 class="username ctm-text-title"></h3>
 		<ul class="nav flex-column">
-			<li class="nav-item"><a href="#" class="nav-link ctm-link">My Profile</a></li>
+			<li class="nav-item"><a href="/profile" class="nav-link ctm-link">My Profile</a></li>
 			<li class="nav-item"><a href="#" class="nav-link ctm-link">Friends</a></li>
 			<li class="nav-item"><a href="#" class="nav-link ctm-link">Game Stats</a></li>
 			<!-- <li class="nav-item"><a href="#" class="nav-link ctm-link">Whenever</a></li>
