--- a/frontend/service/components/error/404.html
+++ b/frontend/service/components/error/404.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column">
     <h1 class="text-center ctm-text-title">error 404</h1>
-    <h3 class="text-center ctm-text-light">I swear I searched, but page not found</h3>
+    <h3 class="text-center ctm-text-light">I swear I've searched, but page not found</h3>
     <div style="position: relative; width: 100%; height: auto;">
         <canvas id="neon-canvas" class="w-100"></canvas>
     </div>
