starting w friends page

--- a/frontend/service/components/chat/chat.html
+++ b/frontend/service/components/chat/chat.html
@@ -36,7 +36,7 @@
         <div id="chat-messages" class="p-3">
             <div class="game-invitation"></div>
         </div>
-        <form id="chat-form" class="p-2 border-top">
+        <form id="chat-form" class="p-2">
             <div class="input-group">
                 <input type="text" id="message-input" class="form-control" placeholder="Type a message">
                 <button type="submit" id="send-btn" class="btn">
