--- a/frontend/service/components/profile/profile.html
+++ b/frontend/service/components/profile/profile.html
@@ -1,4 +1,4 @@
-<div class="container py-4"> <!-- pendiente comprobar verticalwrapp -->
+<div class="container"> <!-- pendiente comprobar verticalwrapp -->
     <section id="profile-section" class="blinking-neon-frame">
         <div class="card ctm-card ctm-text-light">
             <button id="cancel-changes" class="btn cancel-btn position-absolute top-0 end-0 m-2" style="display:none;">x</button>
