--- a/frontend/service/components/signup/signup.html
+++ b/frontend/service/components/signup/signup.html
@@ -1,5 +1,5 @@
 <!-- registration card -->
-<main class="blinking-neon-frame">
+<div class="blinking-neon-frame">
     <div class="card ctm-card p-5">
         <button id="cancel-signup" class="btn cancel-btn position-absolute top-0 end-0 m-2">x</button>
         <h2 class="text-center ctm-text-title">Register</h2>
@@ -30,7 +30,7 @@
             <a href="login.html" class="ctm-text-light ctm-link">Already have an account? Log in</a>
         </div>
     </div> <!-- this closes the card -->
-</main>
+</div>
 <!-- Modal -->
 <div class="modal fade" id="user-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
