--- a/frontend/service/components/friends/styles.css
+++ b/frontend/service/components/friends/styles.css
@@ -14,12 +14,25 @@
     vertical-align: middle;
 }
 
+.friend-picture-expanded {
+    max-width: 100px;
+    height: auto !important;
+    border-radius: 50%;
+    margin-right: 10px;
+    vertical-align: middle;
+}
+
 /* #search-btn {
 	background-color: var(--title);
 	color: var(--dark);
 	border: none;
 	cursor: pointer;
 } */
+
+#friends-container {
+    max-height: 240px;
+    overflow-y: auto;
+}
 
 #search-form-container {
     position: relative;
@@ -38,7 +51,6 @@
     position: absolute;
     right: 0;
     top: 0;
-    z-index: 2;
     width: 38px;
     height: 38px;
     padding: 0;
@@ -46,11 +58,11 @@
     align-items: center;
     justify-content: center;
     transition: border-radius 0.3s ease-in-out, background-color 0.3s ease-in-out;
-    border-radius: 50%; /* Add this line */
+    border-radius: 50%;
 }
 
 #search-form-container.expanded #toggle-search {
-	border-radius: 5px; /* Add this line */
+	border-radius: 5px;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
 }
