--- a/frontend/service/components/friends/friends.html
+++ b/frontend/service/components/friends/friends.html
@@ -42,5 +42,43 @@
             <!-- </div> -->
         <!--    </div> -->
     </div>
+    <!-- Delete Modal -->
+    <!-- Delete Modal -->
+    <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title ctm-text-title" id="deleteModalLabel">Delete Friend</h5>
+            <button type="button" class="close-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
+          </div>
+          <div class="modal-body">
+            Are you sure you want to delete this friend?
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn ctm-btn" data-bs-dismiss="modal">Cancel</button>
+            <button type="button" class="btn ctm-btn-secondary">Delete</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <!-- Block Modal -->
+    <div class="modal fade" id="blockModal" tabindex="-1" aria-labelledby="blockModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title ctm-text-title" id="blockModalLabel">Block Friend</h5>
+            <button type="button" class="close-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
+          </div>
+          <div class="modal-body">
+            Are you sure you want to block this friend?
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn ctm-btn" data-bs-dismiss="modal">Cancel</button>
+            <button type="button" class="btn ctm-btn-danger">Block</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
 </div>
