adding new game options

--- a/frontend/service/components/start-game/styles.css
+++ b/frontend/service/components/start-game/styles.css
@@ -35,3 +35,8 @@ img {
     /* max- */height: 250px !important;
     width: auto;
 }
+
+#pong-options,
+#quick-play-options {
+    display: none;
+}
