--- a/frontend/service/components/start-game/start-game.html
+++ b/frontend/service/components/start-game/start-game.html
@@ -26,7 +26,7 @@
 							</div>
 							<div id="friend-list" class="h-100 flex-column" style="display: none;">
 								<h5 class="ctm-text-light mb-3">Select a friend to play with:</h5>
-								<div id="friends-container" class="mb-3"></div>
+								<div id="friends-container" class="mb-3 friends-container"></div>
 								<button id="start-game-with-friend" class="btn ctm-btn mb-3" disabled>Start Game with Friend</button>
 							</div>
 							<div id="tournament-options" class="h-100 flex-column" style="display: none;">
@@ -40,7 +40,7 @@
 			<div class="col-md-5 mb-4">
 				<div id="chess-btn" class="card-link">
 					<div class="ctm-card card-hover h-100">
-						<div class="card-body text-center">
+						<div class="card-body text-center d-flex flex-column">
 							<h3 class="ctm-text-title mb-3">Play Chess</h3>
 							<div id="play-chess">
 								<img src="https://images.chesscomfiles.com/uploads/v1/images_users/tiny_mce/PedroPinhata/phpNtZwIg.png" alt="Play Chess" class="img-fluid rounded mb-3">
@@ -52,7 +52,7 @@
 							</div>
 							<div id="chess-friend-list" class="h-100 flex-column" style="display: none;">
 								<h5 class="ctm-text-light mb-3">Select a friend to play with:</h5>
-								<div id="chess-friends-container" class="mb-3"></div>
+								<div id="chess-friends-container" class="mb-3 friends-container"></div>
 								<button id="start-chess-with-friend" class="btn ctm-btn mb-3" disabled>Start Game with Friend</button>
 							</div>
 						</div>
@@ -71,7 +71,7 @@
 				<button type="button" class="close-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
 			</div>
 			<div class="modal-body">
-				<p id="modal-text"></p>
+				<p id="modal-text">a</p>
 				<div class="progress mt-3 position-relative" style="height: 30px;">
 					<div id="progress-bar" class="progress-bar" style="width: 100%" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
 					<span id="timer" class="position-absolute top-50 start-50 translate-middle"></span>
