--- a/chess_game/Styles/index.css
+++ b/chess_game/Styles/index.css
@@ -133,9 +133,26 @@ body {
   display: flex;
 }
 
+/* Estilo para la barra de desplazamiento en navegadores WebKit (Chrome, Safari) */
+#move_logger::-webkit-scrollbar {
+  width: 12px;
+}
+
+#move_logger::-webkit-scrollbar-track {
+  background: #2c2c2c; /* Color del fondo de la barra de desplazamiento */
+}
+
+#move_logger::-webkit-scrollbar-thumb {
+  background-color: #555; /* Color de la barra de desplazamiento */
+  border-radius: 10px;
+  border: 3px solid #2c2c2c; /* Espacio alrededor de la barra de desplazamiento */
+}
+
 #move_logger{
   width: 20vw;
-  height: 640px; /*80px (square) x 8 nº*/
+  /*height: 640px; *//*80px (square) x 8 nº*/
+  max-height: 640px;
+  overflow-y: auto; /*scroll*/
   color: white;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: #262522;
