--- a/frontend/service/components/start-game/start-game.html
+++ b/frontend/service/components/start-game/start-game.html
@@ -30,7 +30,7 @@
 								<button id="start-game-with-friend" class="btn ctm-btn mb-3" disabled>Start Game with Friend</button>
 							</div>
 							<div id="tournament-options" class="h-100 flex-column" style="display: none;">
-								<div id="ongoing-tournaments" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Ongoing Tournaments</div>
+								<a href="/ongoing-tournaments" id="ongoing-tournaments" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Ongoing Tournaments</a>
 								<div id="new-tournament" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">New Tournament</div>
 							</div>
 						</div>
