--- a/frontend/service/components/start-game/start-game.html
+++ b/frontend/service/components/start-game/start-game.html
@@ -71,7 +71,7 @@
 				<button type="button" class="close-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
 			</div>
 			<div class="modal-body">
-				<p id="modal-text">a</p>
+				<p id="modal-text"></p>
 				<div class="progress mt-3 position-relative" style="height: 30px;">
 					<div id="progress-bar" class="progress-bar" style="width: 100%" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
 					<span id="timer" class="position-absolute top-50 start-50 translate-middle"></span>
