new alert stystem (es monísimo la verdad)

--- a/frontend/service/components/friends/friends.html
+++ b/frontend/service/components/friends/friends.html
@@ -42,13 +42,12 @@
             <!-- </div> -->
         <!--    </div> -->
     </div>
-    <!-- Delete Modal -->
-    <!-- Delete Modal -->
-    <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+    <!-- Modal -->
+    <div class="modal fade" id="delete-modal" tabindex="-1" aria-labelledby="delete-modal-label" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title ctm-text-title" id="deleteModalLabel">Delete Friend</h5>
+            <h5 class="modal-title ctm-text-title" id="delete-modal-label">Delete Friend</h5>
             <button type="button" class="close-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
           </div>
           <div class="modal-body">
@@ -63,11 +62,11 @@
     </div>
     
     <!-- Block Modal -->
-    <div class="modal fade" id="blockModal" tabindex="-1" aria-labelledby="blockModalLabel" aria-hidden="true">
+    <div class="modal fade" id="block-modal" tabindex="-1" aria-labelledby="block-modal-label" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title ctm-text-title" id="blockModalLabel">Block Friend</h5>
+            <h5 class="modal-title ctm-text-title" id="block-modal-label">Block Friend</h5>
             <button type="button" class="close-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
           </div>
           <div class="modal-body">
