--- a/frontend/service/styles.css
+++ b/frontend/service/styles.css
@@ -164,9 +164,16 @@ body::before {
     border-radius: 10px;
 }
 /* modals */
-.modal-header, .modal-footer {
+.modal-header {
     border: none;
+    background-color: var(--dark);
 }
+
+.modal-footer {
+    border: none;
+    /* background-color: var(--darkish); */
+}
+
 
 .close-modal {
    color: var(--title);
@@ -175,7 +182,7 @@ body::before {
 }
 .modal-content {
     color: var(--light);
-    background: linear-gradient(to top, var(--medium), var(--dark));
+    background: linear-gradient(to bottom, var(--dark), var(--medium));
 }
 
 
