connecting to auth api

--- a/frontend/service/components/login/login.html
+++ b/frontend/service/components/login/login.html
@@ -21,7 +21,7 @@
 			<a href="#" class="ctm-text-light ctm-link">Forgot your password?</a>
 		</div>
 		<div class="d-flex justify-content-center mt-2">
-			<a href="register.html" class="ctm-text-light ctm-link">Don't have an account? Register here</a>
+			<a href="/signup" class="ctm-text-light ctm-link">Don't have an account? Register here</a>
 		</div>
 	</div> <!-- this closes the card -->
 </div>
@@ -34,7 +34,7 @@
 			</div>
 			<div class="modal-body">
 				You don't have an account?
-				<a href="register.html" class="ctm-text-light ctm-link">Sign up</a>
+				<a href="/signup" class="ctm-text-light ctm-link">Sign up</a>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn ctm-btn" data-bs-dismiss="modal">Got it!</button>
