--- a/frontend/service/components/signup/signup.html
+++ b/frontend/service/components/signup/signup.html
@@ -27,7 +27,7 @@
             </div>
         </form>
         <div class="d-flex justify-content-center mt-3">
-            <a href="login.html" class="ctm-text-light ctm-link">Already have an account? Log in</a>
+            <a href="/login" class="ctm-text-light ctm-link">Already have an account? Log in</a>
         </div>
     </div> <!-- this closes the card -->
 </div>
