starting to use an overlay system to improve usability

--- a/frontend/service/components/start-game/start-game.html
+++ b/frontend/service/components/start-game/start-game.html
@@ -1,3 +1,4 @@
+<div id="overlay" class="overlay"></div>
 <div class="container-fluid">
 	<div id="chose-game" style="display: block;">
 		<div class="row">
