--- a/frontend/service/components/start-game/styles.css
+++ b/frontend/service/components/start-game/styles.css
@@ -42,3 +42,22 @@ img {
 #quick-play-options {
     display: none;
 }
+
+#pong-btn, #chess-btn {
+    position: relative;
+}
+
+#chess-btn {
+    z-index: 1 !important;
+}
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.459);
+    display: none;
+    z-index: 50;
+  }
+  
