--- a/chess_game/Styles/index.css
+++ b/chess_game/Styles/index.css
@@ -283,6 +283,27 @@ body {
   width: 48%; /* Ajusta el ancho de los botones para que estén alineados */
 }
 
+/*animation for the atomic variant*/
+@keyframes explosion-red {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  50% {
+    opacity: 0.5;
+    transform: scale(1.5);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(2);
+  }
+}
+
+.explosion-red {
+  background-color: rgba(159, 16, 16, 0.788);
+  animation: explosion-red 1s ease-outque;
+}
+
 /*#root{
   display: flex; 
   flex-direction: column;
