chess integration in progress

--- a/frontend/service/components/start-game/start-game.html
+++ b/frontend/service/components/start-game/start-game.html
@@ -49,7 +49,7 @@
 							</div>
 							<div id="chess-options" class="h-100 flex-column" style="display: none;">
 								<div id="chess-friend" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play with a friend</div>
-								<div id="chess-random" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play with any friend</div>
+								<a href="/chess" id="chess-random" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play with any friend</a>
 							</div>
 							<div id="chess-friend-list" class="h-100 flex-column" style="display: none;">
 								<h5 class="ctm-text-light mb-3">Select a friend to play with:</h5>
